Fixed size of board on small screens (e.g., mobile)

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,15 @@ body {
     font-family: "Exo 2", sans-serif;
     font-weight: 300;
     font-size: 1rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#containerforall {
+  display: flex;
+  flex-direction: column;
 }
 
 /* --- */
@@ -145,7 +154,6 @@ button {
   align-items: center;
   justify-content: center;
   background-color: var(--color-four);
-  width: 100%;
 }
 
 .column {
@@ -162,6 +170,9 @@ button {
 
   margin: 0.25em;
   padding: 0.25em;
+
+  min-width: 25px;
+  max-width: 90px;
 
   border: 1px solid var(--color-one);
   border-radius: 3px;
